// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Delete Directory Expected failures should fail deleting a directory that does not exist 1`] = `
"================Z/OS FILES DELETE FILE===============
"
`;

exports[`Delete Directory Success scenario without profiles should delete a uss directory, with fully specified command 1`] = `
"================Z/OS FILES DELETE FILE FULLY SPECIFIED===============
USS File or directory deleted successfully.
"
`;

exports[`Delete Directory Success scenarios should delete a directory 1`] = `
"================Z/OS FILES DELETE FILE===============
USS File or directory deleted successfully.
"
`;
